# zettagrep

./: .gitignore  AGENTS.md  Cargo.toml  MEMORY.md  README.md
.docs/: high-level-spec-v0.1.md  product-philosophy.md
.zg/: state.json
docs/: 20260413_todos.md  product-philosophy.md  r0_product_philosophy.md  r0_sanity_checks.md  r0_tech-stacks.md  r1_tech-stacks.md  r1_tech_decision_concurrent.md  r2_homebrew_distribution.md  r2_tech_decision_code_symbol_index.md  r2_tech_decision_semantic_search.md  r2_tech_decision_shared_chunk_embeddings.md
docs/r0_behavior_expects/: duplicated_embed.md
pkg/brew/: zg.rb
resources/: README.md
resources/sample-vaults/: ripgrep-14.1.1.json
resources/search-quality/: ripgrep-14.1.1.fixtures.json  ripgrep-14.1.1.golden.json
scripts/: bench-sample-vault.sh  ensure-sample-vault.sh  eval-search-quality.sh  prepare-model.sh  probe-chunks.sh  probe-db-cache.sh  run-local.sh
src/: dev.rs  lib.rs  main.rs  messages.rs  paths.rs  search.rs  walk.rs
src/index/: code_symbols.rs  db.rs  dev.rs  embed.rs  files.rs  hybrid.rs  mod.rs  sync.rs  types.rs  util.rs
src/search/: backend.rs  mod.rs  ripgrep_backend.rs
tests/: cli.rs  concurrency.rs
