[package]
name = "zg"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first filesystem query engine with regex and SQLite-backed search."
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/zg"
keywords = ["search", "query", "sqlite", "fts", "cli"]
categories = ["filesystem", "text-processing", "command-line-utilities"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
fastembed = "5.13.2"
ignore = "0.4"
regex-syntax = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-vec = "0.1.9"
thiserror = "2"
tree-sitter = "0.26.8"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
